--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-  <string name="app_name">Medicine</string>
+  <string name="app_name">Therapy</string>
+
+  <string name="therapyDateFormat">dd MMM YYYY</string>
 </resources>
