Implement deal form skel, and stub method.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
   <string name="app_name">Therapy</string>
 
   <string name="therapyDateFormat">dd MMM YYYY</string>
+  <string name="dealDateFormat">dd MMMM</string>
+  <string name="timeDateFormat">HH:mm</string>
 </resources>
